@@ -66,6 +66,7 @@ static void on_close_tab(GtkAction* act, FmMainWin* win);
 static void on_close_win(GtkAction* act, FmMainWin* win);
 static void on_open(GtkAction* act, FmMainWin* win);
 
+static void on_link(GtkAction* act, FmMainWin* win);
 static void on_copy_to(GtkAction* act, FmMainWin* win);
 static void on_move_to(GtkAction* act, FmMainWin* win);
 static void on_rename(GtkAction* act, FmMainWin* win);
@@ -317,6 +318,8 @@ static void on_folder_view_sel_changed(FmFolderView* fv, gint n_sel, FmMainWin* 
     gtk_action_set_sensitive(act, has_selected);
     act = gtk_ui_manager_get_action(win->ui, "/menubar/EditMenu/Rename");
     gtk_action_set_sensitive(act, n_sel == 1); /* can rename only single file */
+    act = gtk_ui_manager_get_action(win->ui, "/menubar/EditMenu/Link");
+    gtk_action_set_sensitive(act, n_sel == 1); /* can link only single file */
     act = gtk_ui_manager_get_action(win->ui, "/menubar/EditMenu/CopyTo");
     gtk_action_set_sensitive(act, has_selected);
     act = gtk_ui_manager_get_action(win->ui, "/menubar/EditMenu/MoveTo");
@@ -1464,6 +1467,24 @@ static void on_open(GtkAction* act, FmMainWin* win)
         if (g_list_length(l) > 0)
             fm_launch_files_simple(GTK_WINDOW(win), NULL, l, pcmanfm_open_folder, NULL);
         fm_file_info_list_unref(files);
+    }
+}
+
+static void on_link(GtkAction *act, FmMainWin *win)
+{
+    FmPathList *files = fm_folder_view_dup_selected_file_paths(win->folder_view);
+    if (files)
+    {
+        if (fm_path_list_get_length(files) == 1)
+        {
+            FmPath *dest = fm_select_folder(GTK_WINDOW(win), NULL);
+            if (dest)
+            {
+                fm_link_files(GTK_WINDOW(win), files, dest);
+                fm_path_unref(dest);
+            }
+        }
+        fm_path_list_unref(files);
     }
 }
 
