@@ -161,6 +161,9 @@ Changes on 1.2.0 since 1.1.0:
     defines should status bar be shown or hidden. It's controllable via
     menu 'View'->'Show Status Bar'.
 
+* Added new menu option 'File'->'Create Symlink...' to create link on the
+    selected file into some directory.
+
 
 Changes on 1.1.0 since 1.0.1:
 
